--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>demo测试</title>
+  <title>vue造轮子</title>
 </head>
 <body>
-  <div id="app">
-    {{msg}}
+  <div id="app" style="padding: 100px;">
+    <x-accordion single>
+      <x-acditem title="标题1">内容1</x-acditem>
+      <x-acditem title="标题2">内容2</x-acditem>
+      <x-acditem title="标题3">内容3</x-acditem>
+    </x-accordion>
   </div>
   <script src='./src/app.js'></script>
 </body>
