--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 </head>
 <body>
   <div id="app" style="padding: 100px;">
-    <x-accordion single>
-      <x-acditem title="标题1">内容1</x-acditem>
-      <x-acditem title="标题2">内容2</x-acditem>
-      <x-acditem title="标题3">内容3</x-acditem>
+    <x-accordion :selected = "selectTab" single>
+      <x-acditem title="标题1" name="0">内容1</x-acditem>
+      <x-acditem title="标题2" name="1">内容2</x-acditem>
+      <x-acditem title="标题3" name="2">内容3</x-acditem>
     </x-accordion>
+    {{selectTab}}
   </div>
   <script src='./src/app.js'></script>
 </body>
