--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <title>vue造轮子</title>
 </head>
 <body>
-  <div id="app" style="padding: 100px;">
-    <x-accordion :selected = "selectTab" single>
-      <x-acditem title="标题1" name="0">内容1</x-acditem>
-      <x-acditem title="标题2" name="1">内容2</x-acditem>
-      <x-acditem title="标题3" name="2">内容3</x-acditem>
+  <div id="app" style = "padding: 100px;">
+    <!--.sync =  @update:selected=(val)=>selectTab=val-->
+    <x-accordion :selected.sync = "selectTab" single>
+      <x-acditem title="标题1" name="1">内容1</x-acditem>
+      <x-acditem title="标题2" name="2">内容2</x-acditem>
+      <x-acditem title="标题3" name="3">内容3</x-acditem>
     </x-accordion>
     {{selectTab}}
   </div>
