set line position

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     {{selectTab}} -->
 
     <!--Tab-->
-    {{selectedTab}}
-    <x-tab :selected.sync="selectedTab">
+    <!--@update:selected="val=>selected=val[0]"-->
+    <x-tab :selected="selectedTab" @update:selected="(value,vm)=>selectedTab=value">
+      {{selectedTab}}
       <x-tab-nav>
         <template slot="actions">
           <button>设置</button>
