change pointer disbaled

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <button>设置</button>
         </template>
         <x-tab-item name="gs">Warriors</x-tab-item>
-        <x-tab-item name="la">Lakers</x-tab-item>
+        <x-tab-item name="la" disabled>Lakers</x-tab-item>
         <x-tab-item name="bk">Nets</x-tab-item>
       </x-tab-nav>
       <x-tab-content>
