--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <style>
     *{box-sizing:border-box;}
     body, html { height: 100%; }
-    .index {
+    /* .index { */
       /* background: darkslateblue */
-      border: 1px solid orange;
-    }
+      /* border: 1px solid orange; */
+    /* } */
   </style>
 </head>
 <body>
