--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <!--Row-->
     <!-- attribute  span  gutter offset -->
     <div class="index">
-      <x-row gutter="30" align="center">
-        <x-col span="10">10</x-col>
-        <x-col span="4">4</x-col>
+      <x-row gutter="20" align="center">
+        <x-col span="20":phone="{span:12}" :pc="{span:8}">20</x-col>
+        <x-col span="4" :phone="{span:12}" :pc="{span:4}">4</x-col>
       </x-row>
     </div>
   </div>
