--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
   <style>
     *{box-sizing:border-box;}
     body, html { height: 100%; }
-    .box {
-      width: 100px;
-      height: 100px;
-      border: 1px solid orange;
-    }
+    .box {width: 200px;height: 200px;border: 1px solid orange;}
     /* .index { */
       /* background: darkslateblue */
       /* border: 1px solid orange; */
@@ -68,10 +64,16 @@
     </div> -->
 
     <!-- sliders -->
-    <x-sliders :selected="selectab">
-      <x-slides-item name="1"><div class="box">1</div></x-slides-item>
-      <x-slides-item name="2"><div class="box">2</div></x-slides-item>
-      <x-slides-item name="3"><div class="box">3</div></x-slides-item>
+    <x-sliders :selected.sync="selected">
+        <x-slides-item name="Warriors">
+          <div class="box">Warriors</div>
+        </x-slides-item>
+        <x-slides-item name="Lakers">
+          <div class="box">Lakes</div>
+        </x-slides-item>
+        <x-slides-item name="Nets">
+          <div class="box">Nets</div>
+        </x-slides-item>
     </x-sliders>
   </div>
   <script src='./src/app.js'></script>
