this.$nextick animation disorder

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
       </x-row>
     </div> -->
 
-    <!-- sliders -->
+    <!-- Sliders -->
     <x-sliders :selected.sync="selected">
         <x-slides-item name="Warriors">
           <div class="box">Warriors</div>
         </x-slides-item>
         <x-slides-item name="Lakers">
-          <div class="box">Lakes</div>
+          <div class="box">Lakers</div>
         </x-slides-item>
         <x-slides-item name="Nets">
           <div class="box">Nets</div>
