--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     *{box-sizing:border-box;}
     body, html { height: 100%; }
-    .box {width: 200px;height: 200px;border: 1px solid orange;}
+    .box {width: 200px;height: 200px;}
     /* .index { */
       /* background: darkslateblue */
       /* border: 1px solid orange; */
