print all children by recrusion

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div> -->
 
     <!-- Sliders -->
-    <x-sliders :selected.sync="selected">
+    <!-- <x-sliders :selected.sync="selected">
         <x-slides-item name="Warriors">
           <div class="box">Warriors</div>
         </x-slides-item>
@@ -74,7 +74,10 @@
         <x-slides-item name="Nets">
           <div class="box">Nets</div>
         </x-slides-item>
-    </x-sliders>
+    </x-sliders> -->
+    
+    <!--Cascader -->
+    <x-cascader :source="source"></x-cascader>
   </div>
   <script src='./src/app.js'></script>
 </body>
