--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
     </x-sliders> -->
     
     <!--Cascader -->
-    <x-cascader :source="source"></x-cascader>
+    <x-cascader 
+        :source="source"
+        :selected.sync="selected"></x-cascader>
   </div>
   <script src='./src/app.js'></script>
 </body>
