resolve rightitems cannot response

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         :source="source"
         :selected="selected"
         @update:selected = "updateSelected"
+        @update:source="updateSource"
         :load-data="loadData"></x-cascader>
   </div>
   <script src='./src/app.js'></script>
