--- a/index.html
+++ b/index.html
@@ -77,12 +77,13 @@
     </x-sliders> -->
     
     <!--Cascader -->
+    <!--options: 1.load-data 2.source-->
     <x-cascader 
         :source="source"
         :selected="selected"
         @update:selected = "updateSelected"
         @update:source="updateSource"
-        :load-data="loadData"></x-cascader>
+        ></x-cascader>
   </div>
   <script src='./src/app.js'></script>
 </body>
