--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         :selected="selected"
         @update:selected = "updateSelected"
         @update:source="updateSource"
+        :load-data="loadData"
         ></x-cascader>
   </div>
   <script src='./src/app.js'></script>
