--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     *{box-sizing:border-box;}
     body, html { height: 100%; }
-    .box {width:500px;height: 200px;}
+    .box {width:500px;height: 200px;display:flex;justify-content: center;align-items: center;}
     /* .index { */
       /* background: darkslateblue */
       /* border: 1px solid orange; */
