--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>vue造轮子</title>
-  <style>
+  <!-- <style>
     *{box-sizing:border-box;}
     body, html { height: 100%; }
     .box {width:500px;height: 200px;display:flex;justify-content: center;align-items: center;}
-    /* .index { */
-      /* background: darkslateblue */
-      /* border: 1px solid orange; */
-    /* } */
-  </style>
+    .index {
+      background: darkslateblue;
+      border: 1px solid orange;
+    }
+  </style> -->
 </head>
 <body>
   <div id="app">
@@ -64,7 +64,7 @@
     </div> -->
 
     <!-- Sliders -->
-    <x-sliders :selected.sync="selected">
+    <!-- <x-sliders :selected.sync="selected">
         <x-slides-item name="Warriors">
           <div class="box">Warriors</div>
         </x-slides-item>
@@ -74,7 +74,7 @@
         <x-slides-item name="Nets">
           <div class="box">Nets</div>
         </x-slides-item>
-    </x-sliders>
+    </x-sliders> -->
     
     <!--Cascader -->
     <!--options: 1.load-data 2.source-->
