bug for sliders

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>vue造轮子</title>
-  <!-- <style>
-    *{box-sizing:border-box;}
+  <style>
+    /* *{box-sizing:border-box;}
     body, html { height: 100%; }
     .box {width:500px;height: 200px;display:flex;justify-content: center;align-items: center;}
     .index {
       background: darkslateblue;
       border: 1px solid orange;
-    }
-  </style> -->
+    } */
+  </style>
 </head>
 <body>
   <div id="app">
